# randomness-beacon-watcher

./: Cargo.toml  README.md
artifacts/: metadata.scale
src/: main.rs
