[package]
name = "randomness-beacon-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.35.2"
subxt-signer = "0.35.2"
tokio = { version = "1.35", features = ["macros", "time", "rt-multi-thread"] }
# etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk/", branch = "main" } 
etf-crypto-primitives = { path = "../etf-sdk/etf-crypto-primitives" } 
clap = { version = "4.1.1", features = ["derive"] }
rand_chacha = "0.3.1"
ckb-merkle-mountain-range = "0.5.2"
blake2b-rs = "0.2.0"
bytes = "1.4.0"
serde_json = "1.0.108"
indicatif = "0.17.8"
# beefy = { package = "sp-consensus-beefy", git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "etf", features = ["bls-experimental"] } 
# sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "etf", features = ["bls-experimental"]}
beefy = { package = "sp-consensus-beefy", path = "../polkadot-sdk/substrate/primitives/consensus/beefy", features = ["bls-experimental"] } 
sp-application-crypto = { path = "../polkadot-sdk/substrate/primitives/application-crypto", features = ["bls-experimental"] }
sp-core = { path = "../polkadot-sdk/substrate/primitives/core", features = ["bls-experimental"] }
sp-runtime = { path = "../polkadot-sdk/substrate/primitives/runtime" }
ark-bls12-377 = "0.4.0"
ark-std = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
w3f-bls = "0.1.3"
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
hex = "0.4.3"
array-bytes = "6.1"